<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="16dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/movie_image_description" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/moviePoster"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movieTitle"
                    style="@style/cardTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/judulFilm" />

                <TextView
                    android:id="@+id/movieRating"
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="3"
                    android:text="@string/movieRating"
                    android:textColor="@color/black" />
            </LinearLayout>


            <TextView
                android:id="@+id/movieReleaseDate"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movieDate"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/movieLang"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/movieLanguage"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/delFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_baseline_delete_24" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>