<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    tools:context=".view.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700">

        <TextView
            style="@style/toolbarTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/home" />

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profil"
            android:src="@drawable/ic_baseline_person_24" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profil"
            android:src="@drawable/ic_baseline_favorite_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/greetingGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeToolbar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user" />

        <TextView
            android:id="@+id/greetingText"
            style="@style/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greetingGroup"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/homeProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#28858585"
        android:padding="180dp" />

</RelativeLayout>